--- a/index.css
+++ b/index.css
@@ -1,58 +1,147 @@
 *
 {
+    padding: 0;
     margin: 0;
 }
-
-.nav{
-    height: 3rem;
-    background-color:brown;
+/* nav section*/
+nav{
+    display: flex;
+    background-color:pink;
+    justify-content: space-between;
+    padding-top: 1vh;
+    padding-right: 3vh;
+    padding-left: 3vh;
+    padding-bottom: 1vh;
 }
-.navigation a{
+nav select{
+    display: hidden;
+}
+
+@media (min-width:700px) {
+    nav select{
+        display: flex;
+        flex-direction: column;
+    }
+    nav select{
+        display: none;
+    }
+}
+
+.logo a{
+    display: flex;
     text-decoration: none;
-    color: white;
-    text-align: center;
-}
-.navigation{
-    padding-top: 2vh;
-    text-align: right;
-}
-.navigation a{
-    padding-left: 1vh;
-    text-decoration: none;
-}
-/*main section*/
-.main{
-}
-.one{
-    color: aliceblue;
-    background-color: blue;
-    text-align: center;
-}
-.two{
-    
-    text-align: center;
-    color: red;
-    background-color: black;
-
-
-}
-.three{
-    text-align: center;
+    font-size: large;
+    font-weight: bold;
     color: black;
-    background-color: red;
 }
-.four{
-    background-color: yellow;
+.logo1{
+list-style: none;
+    display: flex;
 }
-.five{
-    background-color: green;
-} .five img{
-   
-    width:30vw ;
+.logo1 a{
+    text-decoration: none;
+    color: black;
+}
+.logo1 li {
+padding: 1rem;
+}
+
+*/main section*/
+.intro{
+background-color:green;
+color: blue;
+display: flex;
+padding: 3px;
+margin-top: 4px;
+margin: left 3px; 
+cursor: pointer;
+}
+.intro2 img{
+    height: 150px;
+    width: 150px;
     border-radius: 50%;
-    border: 8px crimson;
+    border: 2px solid skyblue;
+    text-align: center;
+    padding: 1vh;
+    margin-top: 1vh;
 }
+
+intro1 a button{
+    background-color: blue;
+    color: black;
+    padding: 3px;
+    
+}
+.intro1 a button:hover{
+    color: pink;
+    transform: scale(1.1);
+}
+.intro1 h1{
+    color: black;
+    background-color:white;
+    text-align: center;
+}
+.intro1 p{
+    color: black;
+    text-align: center;
+    
+}
+/*main to about section*/
+.About{
+    background-color:pink;
+    color: black;
+    margin-top: 3vh;
+    text-align: center;
+    padding: 3vh;
+}
+/* Education section*/
+.Education{
+     
+     background-color: lightcyan;
+     
+     padding: 4vh;
+}
+.edu{
+    text-align: center;
+    padding: 1vh;
+    background-color: ;
+    color: teal;
+    margin-top: 2vh;
+
+}
+.Education h2{
+  text-align: center;  
+    color: black;
+}
+.Education ul{
+    list-style: none;
+}
+
+.Education div{
+    padding-left: 5vh;
+    text-align: center;
+}
+.Education div legend button{
+    color: firebrick;
+    background-color: black;
+    border-radius: 5px;
+    padding: 2vh;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.Contact{
+    margin: 3vh;
+    padding: 2vh;
+    background-color:pink;
+        text-align: center;}
+ .Contact ul{
+    list-style: none;
+ }
+
+/*footer section*/
 .footer{
-   height: 3rem; 
-   background-color: blue;
+    text-align: center;
+    background-color: green;
+    color: brown;
+    padding: 1vh;
+    margin: 1vh;
 }
