--- a/port.css
+++ b/port.css
@@ -12,20 +12,13 @@ nav{
     padding-right: 3vh;
     padding-left: 3vh;
     padding-bottom: 1vh;
+    align-items: center;
 }
-nav select{
-    display: hidden;
-}
+/* nav select{
+    display: none;
+}*/
 
-@media (min-width:700px) {
-    nav select{
-        display: flex;
-        flex-direction: column;
-    }
-    nav select{
-        display: none;
-    }
-}
+
 
 .logo a{
     display: flex;
@@ -46,15 +39,16 @@ list-style: none;
 padding: 1rem;
 }
 
-*/main section*/
+/* main section */
 .intro{
-background-color:green;
+/* background-color:green; */
 color: blue;
 display: flex;
 padding: 3px;
 margin-top: 4px;
 margin: left 3px; 
 cursor: pointer;
+
 }
 .intro2 img{
     height: 150px;
@@ -64,6 +58,7 @@ cursor: pointer;
     text-align: center;
     padding: 1vh;
     margin-top: 1vh;
+    
 }
 
 intro1 a button{
@@ -144,4 +139,19 @@ intro1 a button{
     color: brown;
     padding: 1vh;
     margin: 1vh;
+}
+@media (min-width:700px) {
+    nav select{
+        display: flex;
+        flex-direction: column;
+    }
+    nav select{
+        display: none;
+    }
+}
+
+@media(max-width: 700px){
+    .logo1{
+        display: none;
+    }
 }
